Migrate material stat loading to loadables
Loadables mean you have more control over parsing validation and reduces packet buffer boilerplate. Plus, its now easier to parse complex types from lists or objects
This also makes it easier to access material stat type properties like can repair