@@ -1,37 +1,38 @@
 package slimeknights.tconstruct.library.materials.stats;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import io.netty.buffer.Unpooled;
 import net.minecraft.network.FriendlyByteBuf;
 import org.junit.jupiter.api.Test;
+import slimeknights.mantle.data.registry.IdAwareComponentRegistry;
 import slimeknights.tconstruct.fixture.MaterialFixture;
 import slimeknights.tconstruct.fixture.MaterialStatsFixture;
 import slimeknights.tconstruct.library.materials.definition.MaterialId;
 import slimeknights.tconstruct.test.BaseMcTest;
-import slimeknights.tconstruct.tools.stats.ExtraMaterialStats;
+import slimeknights.tconstruct.tools.stats.BindingMaterialStats;
 import slimeknights.tconstruct.tools.stats.HandleMaterialStats;
 import slimeknights.tconstruct.tools.stats.HeadMaterialStats;
 
 import java.util.Collection;
+import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class UpdateMaterialStatsPacketTest extends BaseMcTest {
 
   public static final MaterialId MATERIAL_ID = MaterialFixture.MATERIAL_1.getIdentifier();
-  private static final Map<MaterialStatsId,Function<FriendlyByteBuf,? extends IMaterialStats>> DECODER = ImmutableMap.of(
-    MaterialStatsFixture.STATS_TYPE, ComplexTestStats::new,
-    HeadMaterialStats.ID,  HeadMaterialStats::new,
-    HandleMaterialStats.ID,  HandleMaterialStats::new,
-    ExtraMaterialStats.ID, buffer -> ExtraMaterialStats.DEFAULT);
+  private static final IdAwareComponentRegistry<MaterialStatType<?>> LOADER = new IdAwareComponentRegistry<>("Unknown stat type");
+  static {
+    LOADER.register(MaterialStatsFixture.COMPLEX_TYPE);
+    LOADER.register(HeadMaterialStats.TYPE);
+    LOADER.register(HandleMaterialStats.TYPE);
+    LOADER.register(BindingMaterialStats.TYPE);
+  }
 
   @Test
   void testGenericEncodeDecode() {
-    Map<MaterialId, Collection<IMaterialStats>> materialToStats = ImmutableMap.of(
-      MATERIAL_ID, ImmutableList.of(MaterialStatsFixture.MATERIAL_STATS)
+    Map<MaterialId, Collection<IMaterialStats>> materialToStats = Map.of(
+      MATERIAL_ID, List.of(MaterialStatsFixture.MATERIAL_STATS)
     );
 
     UpdateMaterialStatsPacket packetToDecode = sendAndReceivePacket(materialToStats);
@@ -41,21 +42,21 @@ class UpdateMaterialStatsPacketTest extends BaseMcTest {
 
     IMaterialStats materialStats = packetToDecode.materialToStats.get(MATERIAL_ID).iterator().next();
     assertThat(materialStats).isExactlyInstanceOf(ComplexTestStats.class);
+    // ensure the loadable is passed the context field for the proper type
+    assertThat(materialStats.getType()).isEqualTo(MaterialStatsFixture.COMPLEX_TYPE);
     ComplexTestStats realStats = (ComplexTestStats) materialStats;
-    assertThat(realStats.getNum()).isEqualTo(1);
-    assertThat(realStats.getFloating()).isEqualTo(2f);
-    assertThat(realStats.getText()).isEqualTo("3");
+    assertThat(realStats.num()).isEqualTo(1);
+    assertThat(realStats.floating()).isEqualTo(2f);
+    assertThat(realStats.text()).isEqualTo("3");
   }
 
   @Test
   void testAllTicDefaults() {
-    ImmutableList<IMaterialStats> stats = ImmutableList.of(
-      HeadMaterialStats.DEFAULT,
-      HandleMaterialStats.DEFAULT,
-      ExtraMaterialStats.DEFAULT);
-    Map<MaterialId, Collection<IMaterialStats>> materialToStats = ImmutableMap.of(
-      MATERIAL_ID, stats
-    );
+    List<IMaterialStats> stats = List.of(
+        HeadMaterialStats.TYPE.getDefaultStats(),
+        HandleMaterialStats.TYPE.getDefaultStats(),
+        BindingMaterialStats.DEFAULT);
+    Map<MaterialId, Collection<IMaterialStats>> materialToStats = Map.of(MATERIAL_ID, stats);
 
     UpdateMaterialStatsPacket packet = sendAndReceivePacket(materialToStats);
 
@@ -68,6 +69,6 @@ class UpdateMaterialStatsPacketTest extends BaseMcTest {
     UpdateMaterialStatsPacket packetToEncode = new UpdateMaterialStatsPacket(materialToStats);
     packetToEncode.encode(buffer);
 
-    return new UpdateMaterialStatsPacket(buffer, DECODER::get);
+    return new UpdateMaterialStatsPacket(buffer, LOADER);
   }
 }
